tegel/src/components/accordion/accordion.scss
:host {
  .sdds-on-white-bg {
    --sdds-accordion-bg-hover: var(--sdds-accordion-bg-hover-on-white);
  }
}

// TODO question: should we not share this like before?
@mixin sdds-focus-state {
  outline: 2px solid var(--sdds-blue-400);
  outline-offset: -2px;
}

@mixin disabledStyle {
  &,
  * {
    cursor: not-allowed;
  }

  .sdds-accordion-header-icon-start,
  .sdds-accordion-header-icon-end {
    background-color: var(--sdds-accordion-bg);
    outline: none;
    pointer-events: none;

    &::after {
      border-color: transparent;
    }
  }
}

.sdds-accordion-item {
  list-style: none;
  color: var(--sdds-accordion-colour);

  &,
  * {
    box-sizing: border-box;
  }

  .sdds-accordion-header-icon-start,
  .sdds-accordion-header-icon-end {
    cursor: pointer;
    display: flex;
    align-items: center;

    // fixme: wrong line-height compared to production
    font: var(--sdds-headline-07);
    letter-spacing: var(--sdds-headline-07-ls);
    padding: var(--sdds-spacing-element-16);
    background-color: var(--sdds-accordion-bg);

    .sdds-accordion-icon {
      transform-origin: center;
      transition: transform 0.15s ease-in-out;
      color: var(--sdds-accordion-colour);
    }
  }

  .sdds-accordion-title {
    flex-grow: 2;
  }

  .sdds-accordion-panel {
    cursor: default;
    padding: var(--sdds-spacing-element-8) var(--sdds-spacing-layout-64)
      var(--sdds-spacing-element-32) var(--sdds-spacing-element-16);
    display: none;
    font: var(--sdds-detail-03);
    letter-spacing: var(--sdds-detail-03-ls);

    p {
      margin: 0;
      padding: 0;
    }

    &--padding-reset {
      padding-right: var(--sdds-spacing-element-16);
    }
  }

  .sdds-accordion-header-icon-end {
    .sdds-accordion-icon {
      margin: 0 0 0 var(--sdds-spacing-element-32);
    }
  }

  .sdds-accordion-header-icon-start {
    .sdds-accordion-title {
      order: 1;
    }

    .sdds-accordion-icon {
      order: 0;
      margin: 0 var(--sdds-spacing-element-16) 0 0;
    }
  }

  &:hover {
    .sdds-accordion-header-icon-start,
    .sdds-accordion-header-icon-end {
      background-color: var(--sdds-accordion-bg-hover);
    }
  }

  &:focus {
    @include sdds-focus-state;

    .sdds-accordion-header-icon-start,
    .sdds-accordion-header-icon-end {
      background-color: var(--sdds-accordion-bg-focus);
      outline: none;
    }
  }

  &:active,
  &.active {
    .sdds-accordion-header-icon-start,
    .sdds-accordion-header-icon-end {
      background-color: var(--sdds-accordion-bg-active);
      outline: none;
    }
  }

  &.disabled {
    &,
    .sdds-accordion-header-icon-end,
    .sdds-accordion-header-icon-start,
    .sdds-accordion-panel {
      color: var(--sdds-accordion-colour-disabled);
      cursor: not-allowed;

      .sdds-accordion-icon {
        color: var(--sdds-accordion-colour-disabled);
      }
    }

    &:hover,
    &:focus,
    &:active,
    &.active {
      @include disabledStyle;
    }
  }

  &.expanded {
    .sdds-accordion-panel {
      display: block;
      padding-bottom: 31px;
    }

    .sdds-accordion-icon {
      transform: rotate(180deg);
    }

    .sdds-accordion-header-icon-end {
      .sdds-accordion-icon {
        margin-right: 0;
        margin-left: var(--sdds-spacing-element-32);
      }
    }

    .sdds-accordion-header-icon-start {
      .sdds-accordion-icon {
        margin-left: 0;
        margin-right: var(--sdds-spacing-element-16);
      }
    }
  }
}

:host {
  display: block;

  .sdds-accordion-header-icon-start,
  .sdds-accordion-header-icon-end {
    position: relative;

    &::after {
      content: '';
      position: absolute;
      width: 100%;
      height: 0;
      left: 0;
      z-index: 2;
    }

    &::after {
      bottom: -1px;
      border-bottom: 1px solid transparent;
    }
  }
}

::slotted(sdds-accordion-item) {
  border-top: 1px solid var(--sdds-accordion-border);
}

::slotted(sdds-accordion-item:focus) {
  border-top: 1px solid var(--sdds-accordion-border-focus);
}

::slotted(sdds-accordion-item[disabled='true']:focus) {
  border-color: var(--sdds-accordion-border);
}

::slotted(sdds-accordion-item:last-child) {
  border-bottom: 1px solid var(--sdds-accordion-border);
}

:host(:focus) {
  @include sdds-focus-state;

  .sdds-accordion-item {
    .sdds-accordion-header-icon-start,
    .sdds-accordion-header-icon-end {
      background-color: var(--sdds-accordion-bg-focus);
      outline: none;

      &::after {
        border-color: var(--sdds-accordion-border-focus);
      }
    }
  }

  .disabled {
    @include disabledStyle;
  }
}

:host(:active) {
  .sdds-accordion-header-icon-start,
  .sdds-accordion-header-icon-end {
    background-color: var(--sdds-accordion-bg-active);
    outline: none;
  }

  .disabled {
    @include disabledStyle;
  }
}

